objects/EZTest__c.object
<CustomObject>
    <fields>
        <fullName>EZTestField2__c</fullName>
        <description>Test</description>
        <label>EZTestField2</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EZTestFieldDemo__c</fullName>
        <description>Test</description>
        <label>EZTestFieldDemo</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EZTestField__c</fullName>
        <label>EZTestField</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EZTestSai__c</fullName>
        <label>EZTestSai</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>EZTest</label>
    <nameField>
        <label>EZTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EZTest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EZTestRule</fullName>
        <active>true</active>
        <errorConditionFormula>EZTestField__c  &lt;&gt; &quot;Sai&quot;</errorConditionFormula>
        <errorMessage>Test2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EZVRDemo</fullName>
        <active>true</active>
        <errorConditionFormula>EZTestField__c  &lt;&gt; &quot;Pavan&quot;</errorConditionFormula>
        <errorMessage>Test 23</errorMessage>
    </validationRules>
</CustomObject>